service-pod-a.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-pod-a
spec:
  selector:
    app: pod-a
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5678
